2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/Outlier.java
	(equals): Implemented.
	
2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/StandardXYItemRenderer.java
	(setBaseShapesVisible): Call fireChangeEvent() instead of notifyListeners(),
	(setPlotLines): Likewise,
	(setGapThresholdType): Likewise,
	(setGapThreshold): Likewise,
	(setPlotImages): Likewise,
	(setLegendLine): Likewise.
	
2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/PiePlot.java
	(DEFAULT_INTERIOR_GAP): Modified default value,
	(maximumLabelWidth): Likewise,
	(labelGap): Likewise,
	(labelLinkMargin): Likewise,
	(DEBUG_DRAW_INTERIOR): New debug flag,
	(DEBUG_DRAW_LINK_AREA): Likewise,
	(DEBUG_DRAW_PIE_AREA): Likewise,
	(PiePlot(PieDataset)): Removed background paint setting,
	(drawPie): Modified label position calculations and added debug code,
	(drawLabels): Modified label width calculation,
	* source/org/jfree/chart/plot/PiePlot3D.java
	(depthFactor): Changed default value,
	(draw): Modified chart dimension calculations and added debug code, in line
	with changes made to the PiePlot class.
	
2007-11-19  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/StandardDialScale.java
	(getLowerBound): New method,
	(setLowerBound): Likewise,
	(getUpperBound): Likewise,
	(setUpperBound): Likewise,
	(getMinorTickStroke): Likewise,
	(setMinorTickStroke): Likewise.
	
2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(equals): Added check for domain/rangeTickBandPaint,
	* source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
	(fillDomainGridBand): Handle plot orientation properly,
	(fillRangeGridBand): Likewise.
	
2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1827829 from Richard West: