@@ -37,6 +37,7 @@
  * 08-Mar-2004 : Version 1 (DG);
  * 14-Jun-2007 : Implemented Serializable, updated API docs (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
+ * 21-Nov-2007 : Implemented equals() to shut up FindBugs (DG);
  *
  */
 
@@ -229,6 +230,48 @@ public class PieLabelRecord implements Comparable, Serializable {
             }
         }
         return result;
+    }
+    
+    /**
+     * Tests this record for equality with an arbitrary object.
+     * 
+     * @param obj  the object (<code>null</code> permitted).
+     * 
+     * @return A boolean.
+     */
+    public boolean equals(Object obj) {
+        if (obj == this) {
+            return true;
+        }
+        if (!(obj instanceof PieLabelRecord)) {
+            return false;
+        }
+        PieLabelRecord that = (PieLabelRecord) obj;
+        if (!this.key.equals(that.key)) {
+            return false;
+        }
+        if (this.angle != that.angle) {
+            return false;
+        }
+        if (this.gap != that.gap) {
+            return false;
+        }
+        if (this.allocatedY != that.allocatedY) {
+            return false;
+        }
+        if (this.baseY != that.baseY) {
+            return false;
+        }
+        if (this.labelHeight != that.labelHeight) {
+            return false;
+        }
+        if (this.linkPercent != that.linkPercent) {
+            return false;
+        }
+        if (!this.label.equals(that.label)) {
+            return false;
+        }
+        return true;
     }
     
     /**
