@@ -42,6 +42,7 @@
  * 19-Aug-2005 : Added CategoryMarkerTests (DG);
  * 05-Sep-2006 : Added MarkerTests (DG);
  * 19-Jun-2007 : Removed ContourPlotTests and ColorPaletteTests (DG);
+ * 21-Nov-2007 : Added PieLabelRecordTests (DG);
  *
  */
 
@@ -79,6 +80,7 @@ public class PlotPackageTests extends TestCase {
         suite.addTestSuite(MeterIntervalTests.class);
         suite.addTestSuite(MeterPlotTests.class);
         suite.addTestSuite(MultiplePiePlotTests.class);
+        suite.addTestSuite(PieLabelRecordTests.class);
         suite.addTestSuite(PiePlotTests.class);
         suite.addTestSuite(PiePlot3DTests.class);
         suite.addTestSuite(PlotOrientationTests.class);
